Name:                zeepaardje
Version:             0.1
Synopsis:            
Description:         
License:             BSD3
License-file:        LICENSE
Author:              snak
Maintainer:          snak@snak.org
Copyright:           2012 snak
Category:            Web
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2

Executable zeepaardje
  Main-is:             Main.hs
  Build-depends:       base >= 4,
                       containers,
                       bytestring,
                       attoparsec >= 0.10,
                       conduit,
                       attoparsec-conduit,
                       data-binary-ieee754
  Other-modules:       Codec.Grib,
                       Codec.Grib.Parser,
                       Codec.Grib.Types,
                       Data.MSM,
                       Data.MSM.Types
  Extensions:          OverloadedStrings
  GHC-Options:         -Wall
